--- a/single-pagecv.html
+++ b/single-pagecv.html
@@ -70,7 +70,7 @@
     <section>
         <h2>Education</h2>
         <ul class="education">
-            <li><strong style="color: rgb(38, 129, 233);">SMK WIKRAMA BOGOR</strong> - Gaming software development, BOGOR, INDONESIA (2023 - 2026)</li>
+            <li><strong style="color: rgb(38, 129, 233);">SMK WIKRAMA BOGOR</strong> - Software and Gim Development, BOGOR, INDONESIA (2023 - 2026)</li>
         </ul>
     </section>
 
